<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FriendDetailActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_txtView"
        android:gravity="center"
        android:text="@string/txtView_Contact" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_txtView"
            android:text="@string/txtView_ID" />

        <EditText
            android:id="@+id/edtTID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_txtView"
            android:text="@string/txtView_Name" />

        <EditText
            android:id="@+id/edtTName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_txtView"
            android:text="@string/txtView_Birthday" />

        <EditText
            android:id="@+id/edtTBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtView_Phone"
            android:textSize="@dimen/medium_txtView" />

        <EditText
            android:id="@+id/edtTPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtVAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_txtView"
            android:text="@string/txtView_Address" />

        <EditText
            android:id="@+id/edtTAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/medium_txtView"
                android:text="@string/btn_Save" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/medium_txtView"
                android:text="@string/btn_Cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>